--- a/src/features/homePage/index.scss
+++ b/src/features/homePage/index.scss
@@ -1,8 +1,45 @@
-body {
-  margin: 0;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: bottom;
-  font-family: Montserrat;
-  font-size: 1.2rem;
+.conteiner {
+  display: grid;
+  grid-template-columns: repeat(5, 20%);
+  grid-template-rows: auto;
+  gap: 20px;
+  width: 100%;
+  height: 100%;
+}
+
+.first {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.second {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.third {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+}
+
+.fourth {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
+.fifth {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.sixth {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+
+.block {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
