--- a/src/components/layout/main-layout.scss
+++ b/src/components/layout/main-layout.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables";
+
 .container {
     min-height: 100vh;
     width: 100%;
@@ -30,6 +32,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 6rem $horizontal-padding;
+    overflow-y: scroll
 }
 
 .container.active .main {
