--- a/src/features/homePage/index.scss
+++ b/src/features/homePage/index.scss
@@ -1,45 +1,47 @@
-.conteiner {
-  display: grid;
-  grid-template-columns: repeat(5, 20%);
-  grid-template-rows: auto;
-  gap: 20px;
+$image_width: 30%;
+$image_height: $image_width * 1.3;
+
+.home_page_container {
   width: 100%;
   height: 100%;
 }
 
-.first {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
+.home_page_image {
+  --size: 40%;
+  width: var(--size);
+  height: var(--size + 20%);
+  border-radius: 5%;
 }
 
-.second {
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
+.home_header {
+  display: flex;
+  margin-bottom: 5%;
 }
 
-.third {
-  grid-column: 3 / 4;
-  grid-row: 1 / 2;
+.home_welcome_container {
+  padding: 0 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.fourth {
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
+.home_welcome {
+  text-align: center;
+  font-weight: bold;
 }
 
-.fifth {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
+.home_welcome_describe_header {
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 2%;
 }
 
-.sixth {
-  grid-column: 3 / 4;
-  grid-row: 2 / 3;
+.home_welcome_describe {
+  padding-bottom: 5%;
 }
 
-.block {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+@media (max-width: 768px) {
+  .home_welcome {
+    font-size: small;
+  }
 }
