--- a/src/components/layout/main-layout.scss
+++ b/src/components/layout/main-layout.scss
@@ -3,9 +3,9 @@
 .container {
     min-height: 100vh;
     width: 100%;
-    background-color: #161616;
     overflow-x: hidden;
     transform-style: preserve-3d;
+    background: linear-gradient(to left, #8942a8, #ba282f)
 }
 
 .main {
@@ -115,3 +115,73 @@
         transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
     }
 }
+
+.box-area {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+
+    li:nth-child(1) {
+        left: 86%;
+        width: 80px;
+        height: 80px;
+        animation-delay: 0s;
+    }
+    li:nth-child(2) {
+        left: 12%;
+        width: 30px;
+        height: 30px;
+        animation-delay: 1.5s;
+        animation-duration: 10s;
+    }
+    li:nth-child(3) {
+        left: 70%;
+        width: 100px;
+        height: 100px;
+        animation-delay: 5.5s;
+    }
+    li:nth-child(4) {
+        left: 50%;
+        width: 150px;
+        height: 150px;
+        animation-delay: 0s;
+        animation-duration: 15s;
+    }
+    li:nth-child(5) {
+        left: 65%;
+        width: 40px;
+        height: 40px;
+        animation-delay: 0s;
+    }
+    li:nth-child(6) {
+        left: 15%;
+        width: 100px;
+        height: 100px;
+        animation-delay: 3.5s;
+    }
+}
+
+.box-area li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 25px;
+    height: 25px;
+    background: rgba(255,255,255, 0.2);
+    animation: animate 20s linear infinite;
+    bottom: -100px;
+}
+    @keyframes animate {
+        0% {
+            transform: translateY(0) rotate(0deg);
+            opacity: 1;
+        }
+        100% {
+            transform: translateY(-800px) rotate(360deg);
+            opacity: 0;
+        }
+    }
