fix:(app) clean warning

--- a/src/features/portfolio/index.scss
+++ b/src/features/portfolio/index.scss
@@ -29,14 +29,14 @@
         text-shadow: -1px  -1px -1px #2856ba;
     }
     100% {
-        text-shadow: 0px  1px 0px #00112c;
-        text-shadow: 0px  2px 0px #2856ba;
-        text-shadow: 0px  3px 0px #00112c;
-        text-shadow: 0px  4px 0px #2856ba;
-        text-shadow: 0px  5px 0px #00112c;
-        text-shadow: 0px  6px 0px #2856ba;
-        text-shadow: 0px  7px 0px #00112c;
-        text-shadow: 0px  8px 0px #2856ba;
+        text-shadow: 0  1px 0 #00112c;
+        text-shadow: 0  2px 0 #2856ba;
+        text-shadow: 0  3px 0 #00112c;
+        text-shadow: 0  4px 0 #2856ba;
+        text-shadow: 0  5px 0 #00112c;
+        text-shadow: 0  6px 0 #2856ba;
+        text-shadow: 0  7px 0 #00112c;
+        text-shadow: 0  8px 0 #2856ba;
     }
 }
 
