--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -67,7 +67,7 @@
 
 }
 .line1 {
-    transform-origin: 0% 50%;
+    transform-origin: 0 50%;
 }
 
 .line2 {
@@ -75,12 +75,12 @@
 }
 
 .line3 {
-    transform-origin: 0% 50%;
+    transform-origin: 0 50%;
 }
 
 .line1-t {
     transform: rotate(45deg);
-    transform-origin: 0% 50%;
+    transform-origin: 0 50%;
 }
 
 .line2-t {
@@ -90,7 +90,7 @@
 
 .line3-t {
     transform: rotate(-45deg);
-    transform-origin: 0% 50%;
+    transform-origin: 0 50%;
 }
 
 .hamburger-lines {
