--- a/src/features/contacts/index.scss
+++ b/src/features/contacts/index.scss
@@ -11,4 +11,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .contact {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        justify-content: space-between;
+        padding: 0 10%;
+        flex-direction: row;
+    }
+}
+
+.contact_image {
+    height: 100%;
+    width: 100%;
+    background-color: #00112c
 }
