--- a/src/features/homePage/index.scss
+++ b/src/features/homePage/index.scss
@@ -7,7 +7,7 @@ $image_height: $image_width * 1.3;
 }
 
 .home_page_image {
-  --size: 40%;
+  --size: 30%;
   width: var(--size);
   height: var(--size + 20%);
   border-radius: 5%;
@@ -28,6 +28,7 @@ $image_height: $image_width * 1.3;
 .home_welcome {
   text-align: center;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .home_welcome_describe_header {
