--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -46,7 +46,20 @@
     }
   }
 
-  li ~ li {
-    margin-top: 1rem;
+  li  {
+    margin-top: 1.5rem;
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10% 20%;
+    left: 0;
+    width: 100%;
+    height: 15%
+  }
+  @media (max-width: 500px) {
+    padding: 10% 10%;
   }
 }
